# ML_RandD_Server

./: .gitignore  CLAUDE.md  Justfile  README.md
software/server/: .gitignore  README.md  pyproject.toml
software/server/config/reference_reps/: overhead_squat.json  push_up.json  single_leg_squat.json
software/server/config/rules/: bfl.yaml  bicep.yaml  ffl.yaml  sbl.yaml
software/server/config/temporal/: thresholds.yaml
software/server/config/thresholds/: body_type_adjustments.yaml  default.yaml
software/server/docs/: blazepose_landmark_reference.md
software/server/scripts/: dev.sh  generate_reference_reps.py
software/server/src/auralink/: config.py
software/server/src/bioliminal/: config.py
software/server/tests/: conftest.py
software/server/tests/fixtures/: README.md  loader.py  synthetic_bicep_session.py  synthetic_overhead_squat.py  test_loader.py  test_overhead_squat_fixtures.py  test_push_up_fixture.py  test_rollup_fixture.py  test_single_leg_squat_fixture.py
software/server/tests/integration/: test_bicep_pipeline_e2e.py  test_bicep_pipeline_real_fixture.py  test_bicep_pose_only_e2e.py  test_e2e_overhead_squat.py  test_error_handling.py  test_full_report.py  test_health.py  test_overhead_squat_e2e_fixture.py  test_protocol_e2e.py  test_protocols_endpoint.py  test_push_up_e2e.py  test_report_endpoint.py  test_rollup_e2e.py  test_session_pipeline.py  test_sessions_endpoint.py  test_single_leg_squat_e2e.py
software/server/tests/unit/: test_config.py  test_joint_angles.py  test_keypoints.py  test_model_registry.py  test_rep_segmentation.py  (+3 more)
(+215 files in other folders)
